--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,21 @@
     height: 1000vh;
 } */
 :root{
-    --primary-color: #E74C3C;
+    --primary-color: #19283f;
+}
+.header .nav-links{
+    color: white !important;
+}
+.header .nav-links:hover{
+    color: #E74C3C !important;
+}
+.header .nav-links.active{
+    color: #E74C3C !important;
+}
+.header .navbar-toggler{
+    color: white;
+    font-size: 25px;
+    border-color: white;
 }
 .navbar{
     background-color: var(--primary-color) !important;
@@ -24,7 +38,7 @@ main {
     margin-bottom: 30px;
     height: 60px;
     font-size: 2rem;
-    color: var(--primary-color);
+    color: #E74C3C;
 }
 .our-service .card{
     border-radius: 10px;
@@ -36,4 +50,29 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     font-style: italic;
     line-height: 2.5rem;
+}
+.our-service .card{
+    overflow: hidden;
+}
+.footer{
+    background-color: var(--primary-color);
+    color: white;
+}
+.footer .facebook{
+    background-color: #1877f2;
+}
+.footer .twitter{
+    background-color: #1da1f2;
+}
+.footer .linkedin{
+    background-color: #0a66c2;
+}
+.footer .youtube{
+    background-color: #ff0000;
+}
+.footer .links{
+    text-decoration: none !important;
+}
+.footer .links a{
+    line-height: 2rem;
 }
