--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url(../images/villa.jpg);
+    background-image: url(../images/luxury-v.jpg);
     background-size: cover;
     background-position: center;
 }
