add some images to my web site part2 adn enhance the content

--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -3,7 +3,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 63vh;
-    background-image: url(../images/villa.jpg);
+    background-image: url(../images/testimonials.jpg);
     background-size: cover;
     background-position: center;
 }
