--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -2,8 +2,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35vh;
-    background-image: url(../images/villa.jpg);
+    height: 63vh;
+    background-image: url(../images/contact.jpg);
     background-size: cover;
     background-position: center;
 }
