--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,3 +1,12 @@
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 63vh;
+    background-image: url(../images/client-story.jpg);
+    background-size: cover;
+    background-position: center;
+}
 /* Animation */
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(20px); }
